--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-<div class="container">
+<div class="main-box">
     <h1>Web Page Analyzer</h1>
     <form action="/analyze" method="POST">
         <div class="form-group">
